// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentContributors caption snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-right: 4px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
}

.emotion-3 {
  max-width: 14px;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-3:hover {
  max-width: 24px;
}

.emotion-4 {
  max-width: unset;
  display: block;
  overflow: hidden;
  line-height: 1;
  width: 24px;
  height: 24px;
  vertical-align: middle;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  border-radius: 9999px;
}

.emotion-6 {
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      contributors
    </div>
    <div
      aria-label="avatars of martin-stoyanov, atanasster"
      class="emotion-2"
    >
      <div
        class="emotion-3"
        style="display: inline-block;"
      >
        <div
          class="emotion-4"
        >
          <img
            alt="avatar of martin-stoyanov"
            class="emotion-5"
            height="24"
            src="https://github.com/martin-stoyanov"
            title="martin-stoyanov"
            width="24"
          />
        </div>
      </div>
      <div
        class="emotion-6"
        style="display: inline-block;"
      >
        <div
          class="emotion-4"
        >
          <img
            alt="avatar of atanasster"
            class="emotion-5"
            height="24"
            src="https://github.com/atanasster"
            title="atanasster"
            width="24"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentContributors overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 48px;
}

.emotion-2 {
  max-width: 14px;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-2:hover {
  max-width: 24px;
}

.emotion-3 {
  max-width: unset;
  display: block;
  overflow: hidden;
  line-height: 1;
  width: 24px;
  height: 24px;
  vertical-align: middle;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 100%;
  height: auto;
  border-radius: 9999px;
}

.emotion-5 {
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

<div
    class="emotion-0"
  >
    <div
      aria-label="avatars of martin-stoyanov, atanasster"
      class="emotion-1"
    >
      <div
        class="emotion-2"
        style="display: inline-block;"
      >
        <div
          class="emotion-3"
        >
          <img
            alt="avatar of martin-stoyanov"
            class="emotion-4"
            height="24"
            src="https://github.com/martin-stoyanov"
            title="martin-stoyanov"
            width="24"
          />
        </div>
      </div>
      <div
        class="emotion-5"
        style="display: inline-block;"
      >
        <div
          class="emotion-3"
        >
          <img
            alt="avatar of atanasster"
            class="emotion-4"
            height="24"
            src="https://github.com/atanasster"
            title="atanasster"
            width="24"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
